[package]
name = "findline"
description = "A tool to search lines of a file in a directory recursively"
version = "0.1.0-dev.0"
edition = "2021"
authors = ["Tushar Mistry <mistry,tushar@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tushar1998/rust-cli-find-line"
repository = "git@github.com:tushar1998/rust-cli-find-line.git"
keywords = ["cli", "search", "find", "line", "directory", "recursive"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

